--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Hi I'm Geda</title>
 </head>
 <body>
+    <header>
+        <h1>Geda</h1>
+        <nav>
+            <ul id="nav-list">
+                <li class="nav-item"><a href="">Home</a></li>
+                <li class="nav-item"><a href="">About Me</a></li>
+                <li class="nav-item"><a href="">Projects</a></li>
+                <li class="nav-item"><a href="">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
     <script src="./script.js"></script>
 </body>
 </html>
