--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/4627f18a48.js" crossorigin="anonymous"></script>
     <title>Hi I'm Geda</title>
 </head>
 <body>
@@ -12,13 +13,30 @@
         <h1>Geda</h1>
         <nav>
             <ul id="nav-list">
-                <li class="nav-item"><a href="">Home</a></li>
-                <li class="nav-item"><a href="">About Me</a></li>
+                <li class="nav-item"><a href="#presentation">Home</a></li>
+                <li class="nav-item"><a href="#about">About Me</a></li>
                 <li class="nav-item"><a href="">Projects</a></li>
                 <li class="nav-item"><a href="">Contact</a></li>
             </ul>
         </nav>
     </header>
+    <section id="presentation">
+        <div id="greeting">
+            <h2>Hi, I'm Geda 👽✨</h2>
+            <h3>Web Developer</h3>
+            <div>
+                <a href="#contact"><i class="fa-solid fa-envelope"></i></a>
+                <a href="https://github.com/gedadev" target="_blank"><i class="fa-brands fa-github-square"></i></a>
+                <a href="https://linkedin.com" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://twitter.com/home" target="_blank"><i class="fa-brands fa-twitter-square"></i></a>
+                <a href=""><i class="fa-solid fa-file-lines"></i></a>
+            </div>
+            <p>I'm a self taught software engineer, passionate about building stuff for the web.</p>
+        </div>
+        <div id="image">
+            <img src="./img/v872batch5-nunny-01.png" alt="">
+        </div>
+    </section>
     <script src="./script.js"></script>
 </body>
 </html>
