--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                 <a href="https://twitter.com/home" target="_blank"><i class="fa-brands fa-twitter-square"></i></a>
                 <a href=""><i class="fa-solid fa-file-lines"></i></a>
             </div>
-            <p>I'm a self taught software engineer, passionate about building stuff for the web.</p>
+            <span>
+                I'm a self taught software engineer, passionate about building stuff for the web.
+            </span>
         </div>
         <div id="image">
             <img src="./img/v872batch5-nunny-01.png" alt="">
